--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,9 @@
-@import url('https://fonts.googleapis.com/css?family=Rubik+Mono+One&display=swap');
-
 body {
   margin: 0;
-  font-family: 'Rubik Mono One', sans-serif, -apple-system, BlinkMacSystemFont,
-    'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
-    'Droid Sans', 'Helvetica Neue', sans-serif;
+  padding: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
